src/timestep/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: caddy
    cert-manager.io/cluster-issuer: letsencrypt-staging
  name: example
spec:
  rules:
  - host: registry.timestep.local
    http:
      paths:
      - backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /v2
        pathType: Prefix
  - host: timestep.local
    http:
      paths:
      - backend:
          service:
            name: example1
            port:
              number: 8080
        path: /agents
        pathType: Prefix
      - backend:
          service:
            name: example2
            port:
              number: 8080
        path: /envs
        pathType: Prefix
      - backend:
          service:
            name: caddy
            port:
              number: 80
        path: /
        pathType: Prefix
      # - backend:
      #     service:
      #       name: example2
      #       port:
      #         number: 8080
      #   path: /envs
      #   pathType: Prefix
  tls:
  - secretName: letsencrypt-staging
    hosts:
    - registry.timestep.local
